--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,6 @@
     font-family: 'Poppins', sans-serif;
     padding: 0;
     margin: 0;
-    transition: all 0.15s;
     Box-sizing: border-box;
     Scroll-behavior:smooth;
 }
@@ -12,30 +11,39 @@
     text-align: center;
     font-size: 80px;
     font-weight: bold;
-    margin-top: 20%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
+    border: solid black;
+    width: 100%;
+    height: 100vh;
 }
 
 button{
-    width: 250px;
-    height: 100px;
-    margin-top: 20px;
-    border: none;
-    border-radius: 10px;
-    background-color: aquamarine;
-    color: white;
-    font-size: 30px;
-    font-weight: bold;
+   display: flex; 
+   justify-content: center;
+   align-items: center;
+   width: 90%;
+   height: 330px;
+   border: none;
+   background-color: orange;
+   font-size: 80px;
+   font-weight: bold;
+   border-radius: 10px;
+   margin: 5px;
 }
 
 button:active{
-    background-color: rgb(62, 202, 155);
-    transform: scale(0.9);
+    background-color: orangered;
 }
 
-.timer{
-    display: flex;
+button:disabled{
+    background-color: red;
+}
+
+nav{
+    background-color: aqua;
+    width: 100%;
+    height: 50px;
 }
