--- a/styles.css
+++ b/styles.css
@@ -15,9 +15,9 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    border: solid black;
     width: 100%;
     height: 100vh;
+    background-color: #272829;
 }
 
 button{
@@ -27,23 +27,34 @@ button{
    width: 90%;
    height: 330px;
    border: none;
-   background-color: orange;
+   background-color: #D8D9DA;
    font-size: 80px;
    font-weight: bold;
    border-radius: 10px;
    margin: 5px;
 }
 
-button:active{
-    background-color: orangered;
-}
 
 button:disabled{
-    background-color: red;
+    background-color: #61677A;
+    opacity: 100%;
 }
 
 nav{
-    background-color: aqua;
+    background-color: #D8D9DA;
     width: 100%;
     height: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    font-size: 40px;
+    color: black;
+}
+
+select{
+    width: 100px;
+    height: 40px;
+    border: none;
+    border-radius: 10px;
+    border: 2px solid black;
 }
